--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -35,7 +35,7 @@
                                 <small class="mt-0 mb-3 text-muted">
                                     <b>{{ d.nombre_campo }}</b>: {{ d.valor_campo }}
                                     {% if d.archivo %}
-                                        <a class="far fa-eye" href="{{ d.archivo }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Archivo"></a>
+                                        <a class="far fa-eye" style="text-decoration: none !important;" target="_blank" href="{{ d.archivo }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Archivo"></a>
                                     {% endif %}
                                 </small>
                             {% endif %}
