--- a/Administracion/templates/Administracion/Tercero/Proveedor/documentos.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/documentos.html
@@ -34,7 +34,7 @@
                             <br>
                             <div class="col-md-10">
                                 <small>
-                                    <a class="far fa-3x far fa-plus-circle" href="javascript:abrirModalGestionarDocumentos('{% url 'Administracion:proveedor-perfil-documento-crear' %}')"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar Documento"></a>
+                                    <a class="far fa-3x far fa-plus-circle" href="javascript:abrirModalGestionarDocumentos('{% url 'Administracion:proveedor-perfil-documento-crear' %}')"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar Documento"></a>
                                 </small>
                             </div>
                         </div>
