--- a/Administracion/templates/Administracion/_common/_tarjeta_documento.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_documento.html
@@ -7,13 +7,13 @@
                     <h4>{{ objeto.tipo_documento }}</h4>
                 </div>
                 <div class="info-card-text flex-1" style="text-align: end" >
-                    <a class="far fa-2x far fa-edit" href="javascript:abrirModalGestionarDocumentos('{% url 'Administracion:proveedor-perfil-documento-editar' objeto.id %}')"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar Documento"></a>                </div>
+                    <a class="far fa-2x far fa-edit" href="javascript:abrirModalGestionarDocumentos('{% url 'Administracion:proveedor-perfil-documento-editar' objeto.id %}')"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar Documento"></a>                </div>
             </div>
         </div>
         <div class="card-body p-0 collapse show">
             <div class="p-3" style="text-align: center;">
                 <h5>Ver Documento Cargado</h5>
-                <a class="far fa-2x fa-custom fa-eye" style="text-decoration: none !important;" href="{% url 'Administracion:proveedor-perfil-ver-documento' objeto.id %}" target="_blank" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Documento Cargado"></a>
+                <a class="fal fa-2x fa-custom fa-file-alt" style="text-decoration: none !important;" href="{% url 'Administracion:proveedor-perfil-ver-documento' objeto.id %}" target="_blank" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Documento Cargado"></a>
             </div>
         </div>
     </div>
