EVA-138 Refactor: Se configuran los botones con el formato de la aplicación

--- a/Administracion/templates/Administracion/Tercero/Proveedor/actividades_economicas.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/actividades_economicas.html
@@ -83,12 +83,12 @@
                                                 {% input_textarea_tag 'bienes_servicios' 'Bienes o Servicios que Ofrece' placeholder="Describa los bienes o servicios que ofrece" maxlength="500" required="" value=proveedor.bienes_servicios mensaje_validacion='Por favor ingrese el objeto del contrato.' invalido=errores.objeto_del_contrato %}
                                             </div>
                                         </div>
-                                        <div class="form-row">
-                                            <div>
-                                                <button id="guardar" class="btn btn-primary btn-block"> Guardar </button>
+                                        <div class="form-row justify-content-end">
+                                             <div>
+                                                <a href="{% url 'Administracion:proveedor-perfil' %}" class="btn btn-danger btn-pills btn-block">Cancelar</a>
                                             </div>
-                                            <div style="padding-left: 15px">
-                                                <a href="{% url 'Administracion:proveedor-perfil' %}" class="btn btn-danger btn-block">Cancelar</a>
+                                            <div class="pl-2">
+                                                <button id="guardar" class="btn btn-primary btn-pills btn-block"> Guardar </button>
                                             </div>
                                         </div>
                                     </form>
