--- a/Administracion/templates/Administracion/Tercero/Proveedor/informacion_basica.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/informacion_basica.html
@@ -115,12 +115,12 @@
                                                 {% input_email_tag 'correo_auxiliar' 'Correo electrónico Auxiliar' placeholder="Ingrese el correo electrónico" maxlength="100" value=proveedor.correo_auxiliar mensaje_validacion='Por favor digite el correo electrónico auxiliar.' invalido=errores.email_auxiliar %}
                                             </div>
                                         </div>
-                                        <div class="form-row">
-                                            <div>
-                                                <button id="guardar" class="btn btn-primary btn-block"> Guardar </button>
+                                        <div class="form-row justify-content-end">
+                                             <div>
+                                                <a href="{% url 'Administracion:proveedor-perfil' %}" class="btn btn-danger btn-pills btn-block">Cancelar</a>
                                             </div>
-                                            <div style="padding-left: 15px">
-                                                <a href="{% url 'Administracion:proveedor-perfil' %}" class="btn btn-danger btn-block">Cancelar</a>
+                                            <div class="pl-2">
+                                                <button id="guardar" class="btn btn-primary btn-pills btn-block"> Guardar </button>
                                             </div>
                                         </div>
                                     </form>
