--- a/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
@@ -56,7 +56,7 @@
                                                         </td>
                                                         <td>{{ solicitud.fecha_creacion|date:'Y-m-d' }}</td>
                                                         <td>
-                                                            <a class="far fa-2x fa-eye" href="{% url 'Administracion:proveedor-solicitudes-perfil' solicitud.proveedor_id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Perfil"></a>
+                                                            <a class="btn btn-primary btn-pills" href="{% url 'Administracion:proveedor-solicitudes-perfil' solicitud.proveedor_id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Aprobar/Rechazar">Aprobar/Rechazar</a>
                                                         </td>
                                                     </tr>
                                                 {% endfor %}
