EVA-138 Refactor: Se le agrega la clase a las tablas para que tengan el color primario

--- a/Administracion/templates/Administracion/Tercero/Proveedor/entidades_bancarias.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/entidades_bancarias.html
@@ -38,7 +38,7 @@
                                 <div class="panel-body">
                                     <div class="table-responsive">
                                         <table class="table table-bordered w-100" id="dataTable">
-                                            <thead>
+                                            <thead class="bg-primary-600">
                                                 <tr>
                                                     <th>Tipo de Cuenta</th>
                                                     <th>Entidad Bancaria</th>
