--- a/Administracion/templates/Administracion/Tercero/Proveedor/registro.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/registro.html
@@ -49,7 +49,7 @@
                                 Al registrarse está aceptando nuestros términos y condiciones al igual que nuestra política de cofidencialidad y tratamiento de datos.
                             </div>
                             <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                <a href="{% url 'Administracion:proveedor-politica-cofidencialidad' %}" >
+                                <a href="javascript:verPoliticaconFidencialidad()" >
                                     Ver Política de Cofidencialidad y Tratamiento de Datos
                                 </a>
                             </div>
@@ -66,6 +66,7 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" tabindex="-1" id="modal_terminos_condiciones" role="dialog"></div>
 {% endblock main %}
 
 {% block scripts %}
