--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -53,7 +53,7 @@
                         <div class="col-md-10"></div>
                         <div class="col-md-2" style="float: right" >
                             <small style="float: right">
-                                <a href="javascript:modificarPerfilProveedor({{ proveedor_id }})" class="btn btn-primary btn-block">Modificar Mi Perfil</a>
+                                <a href="javascript:modificarPerfilProveedor({{ proveedor_id }})" class="btn btn-primary btn-pills btn-block">Modificar Mi Perfil</a>
                             </small>
                         </div>
                     </div>
