EVA-138 Fix: Se corrige el error que no permitia la visualización de la información básica

--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -19,14 +19,7 @@
                     {% for d in objeto.datos %}
                         {% if d.valor_campo %}
                             {% if d.validar %}
-                                {% if tipo_nit == d.tipo_nit %}
-                                    <small class="mt-0 mb-3 text-muted">
-                                        <b>{{ d.nombre_campo }}</b>: {{ d.valor_campo }}
-                                        {% if d.archivo %}
-                                            <a class="far fa-eye" href="{{ d.archivo }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Archivo"></a>
-                                        {% endif %}
-                                    </small>
-                                {% elif d.tipo_persona_pro == d.tipo_persona %}
+                                {% if tipo_persona_pro == d.tipo_persona %}
                                     <small class="mt-0 mb-3 text-muted">
                                         <b>{{ d.nombre_campo }}</b>: {{ d.valor_campo }}
                                     </small>
