--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -63,17 +63,23 @@
                             <div class="panel-group">
                                 <div class="panel-body">
                                     <div class="row" id="js-contacts">
-                                        <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                                        <div class="form-group col-xl-4 col-lg-6 col-md-6 col-sm-6">
                                             {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.informacion_basica %}
+                                            <div id="primer_div"></div>
                                         </div>
-                                        <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
+                                        <div class="form-group col-xl-4 col-lg-6 col-md-6 col-sm-6">
                                             {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.actividades_economicas %}
                                             {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.documentos %}
+                                            <div id="segundo_div"></div>
                                         </div>
-                                        <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                            {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.entidades_bancarias %}
-                                            {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.bienes_servicios %}
-                                            {% include 'Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html' %}
+                                        <div class="form-group col-xl-4 col-lg-6 col-md-6 col-sm-6">
+                                            <div id="tercer_div">
+                                                {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.entidades_bancarias %}
+                                                {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.bienes_servicios %}
+                                            </div>
+                                            <div id="cuarto_div">
+                                                {% include 'Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html' %}
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="form-row justify-content-end">
@@ -110,5 +116,7 @@
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/entidadesBancarias.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/proveedor.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/easypiechart/easypiechart.bundle.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/easy-pie-chart/easypiechart.bundle.js' %}"></script>
+    <script src="{% static 'Administracion/js/Tercero/controlEstadoProveedor.js' %}"></script>
+
 {% endblock scripts%}
