--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -1,22 +1,27 @@
+<style>
+    .js-percent:after{
+        content: "%";
+    }
+</style>
 <div id="panel-6" class="panel">
     <div class="panel-container show">
         <div class="panel-content">
             <div id="update-chart" class="d-flex flex-column align-items-center">
                 <div class="row  mb-g">
-                    <div class="col-md-3 align-items-center">
-                        <div class="js-easy-pie-chart color-primary-900 position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100%" data-linewidth="10" data-trackcolor="#ffffff" data-scalelength="0">
+                    <div class="col-md-4 align-items-center">
+                        <div class="js-easy-pie-chart color-primary-900 position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100%" data-linewidth="15" data-trackcolor="#ffffff" data-scalelength="0">
                             <div class="d-flex flex-column align-items-center justify-content-center position-absolute pos-left pos-right pos-top pos-bottom fw-300 fs-xl">
-                                <span class="js-percent d-block text-dark">0</span>
+                                <span class="js-percent d-block text-dark">{{ total }}</span>
                                 <div class="d-block fs-xs text-dark opacity-70">
                                     <small>Completado</small>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-7">
-                        <div class="d-flex mt-2 mb-1 fs-xs text-primary">
-                            <b>Estado:</b> Activo
+                    <div class="col-md-8">
+                        <div class="mt-2 mb-1 fs-xs text-primary">
+                            <b>Estado:</b> {{ datos_estado.estado }}<br>
+                            <b>Última Actualización:</b> {{ datos_estado.ultima_act |date:'Y-m-d h:m'}}
                         </div>
                     </div>
                 </div>
