EVA-140 Feat: Se modifica la tarjeta de estado para mostrar datos adicionales Se agrega un condicional, para mostrarla solo para el proveedor

--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -78,7 +78,9 @@
                                                 {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.bienes_servicios %}
                                             </div>
                                             <div id="cuarto_div">
-                                                {% include 'Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html' %}
+                                                {% if proveedor_id %}
+                                                    {% include 'Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html' %}
+                                                {% endif %}
                                             </div>
                                         </div>
                                     </div>
