--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -7,7 +7,7 @@
     <div class="panel-container show">
         <div class="panel-content">
             <div id="update-chart" class="d-flex flex-column align-items-center">
-                <div class="row  mb-g">
+                <div class="row">
                     <div class="col-md-4 align-items-center">
                         <div class="js-easy-pie-chart color-primary-900 position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100%" data-linewidth="15" data-trackcolor="#ffffff" data-scalelength="0">
                             <div class="d-flex flex-column align-items-center justify-content-center position-absolute pos-left pos-right pos-top pos-bottom fw-300 fs-xl">
@@ -20,8 +20,13 @@
                     </div>
                     <div class="col-md-8">
                         <div class="mt-2 mb-1 fs-xs text-primary">
-                            <b>Estado:</b> {{ datos_estado.estado }}<br>
-                            <b>Última Actualización:</b> {{ datos_estado.ultima_act |date:'Y-m-d h:m'}}
+                            <b>Estado: </b>{% if datos_estado.estado == True %}<span class="badge badge-primary">Activo</span>{% else %}<span class="badge badge-secondary">Inactivo</span>{% endif %}<br>
+                            {% if datos_estado.ultima_act %}
+                                <b>Última Aprobación:</b> {{ datos_estado.ultima_act |date:'Y-m-d h:m'}}<br>
+                            {% endif %}
+                            {% if datos_estado.estado_solicitud %}
+                                <b>Causa del Rechazo: </b>{{ datos_estado.estado_solicitud }}
+                            {% endif %}
                         </div>
                     </div>
                 </div>
