--- a/Financiero/templates/Financiero/Facturacion/Facturas/index.html
+++ b/Financiero/templates/Financiero/Facturacion/Facturas/index.html
@@ -62,8 +62,13 @@
                                             <td>{{ factura.usuario_crea.username}}</td>
                                             <td>
                                                 <a class="far fa-2x fa-eye" href="{% url 'Financiero:factura-imprimir' factura.id %}"></a>
-                                                {% if perms.Financeiro.delete_facturaencabezado and factura.estado == 10 %}
-                                                  <a class="far fa-2x fa-times-circle color-danger-900" id="eliminar_{{ factura.id }}" href="javascript:void(0);"  onclick="anularFacturaModal({{ factura.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-danger-900"></div></div>' data-toggle="tooltip" title="" data-original-title="Anular"></a>
+                                                {% if perms.Financeiro.delete_facturaencabezado %}
+                                                    {% if factura.estado == 10 or factura.estado == 14 %}
+                                                        <a class="far fa-2x fa-times-circle color-danger-900" id="eliminar_{{ factura.id }}" href="javascript:void(0);"  onclick="anularFacturaModal({{ factura.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-danger-900"></div></div>' data-toggle="tooltip" title="" data-original-title="Anular"></a>
+                                                    {% endif %}
+                                                    {% if factura.estado == 14 %}
+                                                        <a class="far fa-2x fa-plus-hexagon color-info-900" id="notadebito_{{ factura.id }}" href="javascript:void(0);"  onclick="generarNotaDebito({{ factura.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-info-900"></div></div>' data-toggle="tooltip" title="" data-original-title="Nota Débito"></a>
+                                                    {% endif %}
                                                 {% endif %}
                                             </td>
                                         </tr>
