EVA-144 Feat: Se crean funciones generales para mostrar y ocultar campos de formulario Adicional, se usa en el js de proveedor para el formulario de información básica.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/informacion_basica.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/informacion_basica.html
@@ -138,6 +138,7 @@
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
 	<script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
     <script src="{% static 'Administracion/js/selecctoresMultiplesDivipol.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/funcionesGenerales.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/proveedor.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
     <script src="{% static 'TalentoHumano/js/date_picker.js' %}"></script>
